tests/js_error/source_locations/expression/binary/sub.exp
TypeError: BigInt cannot be converted to number
  ┌ tests/js_error/source_locations/expression/binary/sub.js:1:3
  |
1 | 1 - 2n
  |   ^
Stack trace:
  at <global> (tests/js_error/source_locations/expression/binary/sub.js:1:3)